--- a/src/sqm/Makefile
+++ b/src/sqm/Makefile
@@ -55,7 +55,8 @@ QMOBJ = qm2_allocate_e_repul.o qm2_calc_charges.o qm2_calc_dipole.o \
 	qm2_fock_d.o MNDOChargeSeparation.o qm2_print_energy.o \
 	qm2_dftb_get_dftb3_parameters.o qm2_dftb_gamma_dftb3.o
 
-sqmprog: $(BINDIR)/sqm$(SFX)
+.PHONY: sqm
+sqm: $(BINDIR)/sqm$(SFX)
 
 $(BINDIR)/sqm$(SFX): $(SQMOBJ) $(QMOBJ) libs
 	@echo "[SQM]  FC $@"
