get external arpack libraries working, at least on MacOS

--- a/src/msander/Makefile
+++ b/src/msander/Makefile
@@ -40,7 +40,7 @@ LESAPIOBJ= memory_module.o stack.o file_io_dat.o les.o \
     AmberNetcdf.o bintraj.LES.o binrestart.LES.o getcor.LES.o mdfil.LES.o \
     mdwrit.LES.o lmod.LES.o trajene.o ew_box.LESAPI.o minrit.LES.o \
     set.LESAPI.o qm_mm.LESAPI.o amd.o scaledMD.o interface.LESAPI.o \
-    music_module.o
+    music_module.o dsarpack.o
 
 NFE_OBJECTS = \
     nfe-abmd-hooks.o nfe-bbmd-ctxt.o nfe-bbmd-hooks.o  \
@@ -87,7 +87,7 @@ APIOBJ=  file_io_dat.o constants.o state.o memory_module.o stack.o \
     molecule.o dssp.o \
     charmm.API.o crg_reloc.o amd.o scaledMD.o barostats.o interface.o \
     random.o qm_mm.API.o \
-    prmtop_type.o music_module.o wallclock.o veclib.o
+    prmtop_type.o music_module.o wallclock.o veclib.o dsarpack.o
 
 QMAPIOBJ = \
     qm_ewald.o qmmm_vsolv.o \
@@ -120,7 +120,7 @@ MMOBJ = \
     sander_lib.o sander.o scaledMD.o set.o \
     sglds.o shake.o $(SHORT_ENE) softcore.o spatial_fft.o \
     spatial_recip.o stack.o state.o thermo_int.o trajene.o \
-    wallclock.o xminC.o veclib.o
+    wallclock.o xminC.o veclib.o dsarpack.o
 
 LESOBJ= \
     align.o AmberNetcdf.o amd.o amopen.o \
@@ -144,7 +144,7 @@ LESOBJ= \
     sander.LES.o  sander_lib.o scaledMD.o set.LES.o sglds.o \
     shake.o short_ene.LES.o softcore.o spatial_fft.o spatial_recip.o \
     stack.o state.o thermo_int.o trajene.o wallclock.o \
-    xminC.o veclib.o
+    xminC.o veclib.o dsarpack.o
 
 XRAY_OBJS = \
    xray_fourier.o xray_globals.o xray_interface.o xray_utils.o ml.o \
@@ -214,7 +214,7 @@ $(INCDIR)/sander.h: sander.h
 libs:
 	$(VB)cd ../blas && $(MAKE) $(BLAS)
 	$(VB)cd ../lapack && $(MAKE) $(LAPACK)
-	$(VB)cd ../arpack && $(MAKE) libarpack
+	$(VB)cd ../arpack && $(MAKE) $(ARPACK)
 	$(VB)cd ../rism && $(MAKE) librism
 	$(VB)cd ../sqm && $(MAKE) libsqm
 	$(VB)cd ../lib && $(MAKE) libsys
