--- a/recipe/meta.yaml
+++ b/recipe/meta.yaml
@@ -22,6 +22,7 @@ requirements:
    - bzip2
    - zlib
    - openblas
+   - arpack
    - libnetcdf
    - netcdf-fortran
    - fftw
@@ -30,6 +31,7 @@ requirements:
   run:
    - python
    - openblas
+   - arpack
    - libnetcdf
    - netcdf-fortran
    - fftw
