--- a/src/arpack/Makefile
+++ b/src/arpack/Makefile
@@ -17,7 +17,7 @@ ARPACKLIB= ivout.o dvout.o dgetv0.o dlaqrb.o dnaitr.o dnapps.o \
 dnaup2.o dnaupd.o dnconv.o dneigh.o dmout.o \
 dneupd.o dngets.o dsaitr.o dsapps.o dsaup2.o \
 dsaupd.o dsconv.o dseigt.o dsesrt.o dseupd.o \
-dsgets.o dsortc.o dsortr.o dstatn.o dstats.o dstqrb.o dsarpack.o \
+dsgets.o dsortc.o dsortr.o dstatn.o dstats.o dstqrb.o \
 wallclock.o
 
 SARPACKLIB= svout.o sgetv0.o slaqrb.o snaitr.o snapps.o \
@@ -37,4 +37,7 @@ clean:
 
 uninstall:
 	-rm -f $(LIBDIR)/libarpack.a
+
+skip:
+	echo "Skipping arpack"
 
