--- a/src/msander/Makefile
+++ b/src/msander/Makefile
@@ -215,7 +215,7 @@ libs:
 	$(VB)cd ../blas && $(MAKE) $(BLAS)
 	$(VB)cd ../lapack && $(MAKE) $(LAPACK)
 	$(VB)cd ../arpack && $(MAKE) $(ARPACK)
-	$(VB)cd ../rism && $(MAKE) librism
+	$(VB)cd ../rism && $(MAKE) $(RISM)
 	$(VB)cd ../sqm && $(MAKE) libsqm
 	$(VB)cd ../lib && $(MAKE) libsys
     
