--- a/src/rism/Makefile
+++ b/src/rism/Makefile
@@ -34,8 +34,7 @@ depend::
 	./makedepend > depend
 
 skip::
-	/bin/rm -f amber_rism_interface.o
-	touch amber_rism_interface.o
+	@test -e amber_rism_interface.o || touch amber_rism_interface.o 
 
 include depend
 
