append xray_ to ml and bulk_solvent files

--- a/src/msander/Makefile
+++ b/src/msander/Makefile
@@ -147,8 +147,8 @@ LESOBJ= \
     xminC.o veclib.o dsarpack.o
 
 XRAY_OBJS = \
-   xray_fourier.o xray_globals.o xray_interface.o xray_utils.o ml.o \
-   xray_reciprocal_space.o bulk_solvent.o
+   xray_fourier.o xray_globals.o xray_interface.o xray_utils.o \
+   xray_ml.o xray_reciprocal_space.o xray_bulk_solvent.o
 
 .PHONY: dummy
 
