get circle.c example going

--- a/test/nabc/Makefile
+++ b/test/nabc/Makefile
@@ -96,6 +96,11 @@ wch:  wch.c
 	@echo "[NABC] CC $<"
 	$(VB)$(CC) $(CFLAGS) -I$(INCDIR) -o $@ $< -L$(LIBDIR) \
         -lnabc -lcifparse $(LIBS)
+
+circle:  circle.c
+	@echo "[NABC] CC $<"
+	$(VB)$(CC) $(CFLAGS) -I$(INCDIR) -o $@ $< -L$(LIBDIR) \
+        -lnabc -lcifparse $(LIBS)
 #---------------------------------------------------------------------------
 .c.o:
 	@echo "[NABC] CC $<"
