mostly getting rism to get box info from ncrst files

--- a/src/rism/Makefile
+++ b/src/rism/Makefile
@@ -1,6 +1,8 @@
 SHELL=/bin/sh
 include ../../config.h
 
+# Add search paths for .mod files
+LOCALFLAGS = -I../msander
 
 # ------- rism3d information: ----------------------------------------------
 
