--- a/src/msander/Makefile
+++ b/src/msander/Makefile
@@ -212,6 +212,7 @@ $(INCDIR)/sander.h: sander.h
 
 #---------------------------------------------------------------------------
 libs:
+	$(VB)$(MAKE) binrestart.o    # needed by rism_io 
 	$(VB)cd ../blas && $(MAKE) $(BLAS)
 	$(VB)cd ../lapack && $(MAKE) $(LAPACK)
 	$(VB)cd ../arpack && $(MAKE) $(ARPACK)
