various nab tweaks, get duplex.nab working

--- a/src/nab/Makefile
+++ b/src/nab/Makefile
@@ -19,6 +19,13 @@ NAB2COBJS=	\
 	symbol.o	\
 	y.tab.o
 
+LIBNABOBJS=	\
+	gsub.o	\
+	hashutil.o	\
+	traceback.o \
+    time.o \
+	tm_malloc.o	
+
 
 #===========================================================================
 
