--- a/recipe/meta.yaml
+++ b/recipe/meta.yaml
@@ -1,6 +1,6 @@
 package:
   name: amber_phenix
-  version: 1.2.1
+  version: 1.3
 
 source:
   path: ../
@@ -12,7 +12,7 @@ requirements:
   build:
    - {{ compiler('fortran') }}
    - {{ compiler('c') }}
-#  - {{ compiler('cxx') }}
+   - {{ compiler('cxx') }}
 #  - llvm-openmp  # [osx]
 
   host:
