--- a/src/sqm/Makefile
+++ b/src/sqm/Makefile
@@ -68,7 +68,7 @@ libs:
 	$(VB)cd ../blas && $(MAKE) $(BLAS)
 	$(VB)cd ../lapack && $(MAKE) $(LAPACK)
 	$(VB)cd ../arpack && $(MAKE) $(ARPACK)
-	$(VB)cd ../rism && $(MAKE) librism
+	$(VB)cd ../rism && $(MAKE) $(RISM)
 	$(VB)cd ../lib && $(MAKE) libsys
     
 
